@@ -1,5 +1,6 @@
-Applied, but not yet released
-- Moved SPARQLStruct classmethod expandIri() to module level of sparqlparser
+Applied, but not yet released (build 802)
+- cleaned up code and docstrings in base.py and sparqlparser.py
+- Moved SPARQLStruct classmethod expandIri() to sparqlparser module level
 
 Version 0.2.4
 - Added SPARQLStruct instance method "expandIris()" to replace all iri elements with their expansion, taking into account the prefixes and base iri in force at the location of the iri
